# ep_133_sample_tool

./: .gitignore  ANDROID_CLONE_INSTRUCTIONS.md  CLAUDE.md  README.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-midi-foundation/: 01-HUMAN-UAT.md
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/androidTest/java/com/ep133/sampletool/: DeviceScreenTest.kt  NavigationTest.kt  TestMIDIRepository.kt
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/cpp/: native_synth.cpp
AndroidApp/app/src/main/java/com/ep133/sampletool/: MainActivity.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/domain/midi/: ChordPlayer.kt  MIDIRepository.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/domain/model/: EP133.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/domain/sequencer/: SequencerEngine.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/midi/: MIDIManager.kt  MIDIPort.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/: EP133App.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/beats/: BeatsScreen.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/chords/: ChordBuilderScreen.kt  ChordsScreen.kt  ChordsViewModel.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/device/: DeviceScreen.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/pads/: PadsScreen.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/ui/sounds/: SoundsScreen.kt
AndroidApp/app/src/main/java/com/ep133/sampletool/webview/: EP133WebViewSetup.kt  MIDIBridge.kt
AndroidApp/app/src/main/res/values/: themes.xml
AndroidApp/app/src/test/java/com/ep133/sampletool/: PadsViewModelTest.kt  SequencerEngineTest.kt  SoundsViewModelTest.kt  SysExAccumulatorTest.kt  SysExProtocolTest.kt
JucePlugin/: CMakeLists.txt
JucePlugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
iOSApp/EP133SampleTool/App/: EP133SampleToolApp.swift
iOSApp/EP133SampleTool/MIDI/: MIDIManager.swift
